--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>dailydo {% block title %}{% endblock title %}</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+		<link rel="stylesheet" href="{{ url_for("static", filename="custom.css") }}">
 	</head>
 	<body>
-		<nav class="navbar bg-body-tertiary">
-			<div class="container-fluid">
-				<a class="navbar-brand mb-0 h1">DailyDo</a>
-			</div>
-		</nav>
-		<div id="content" class="container-fluid">
+		<div class="container">
+			<nav class="navbar bg-body-tertiary">
+				<a class="navbar-brand mb-0 px-2 h1">DailyDo</a>
+				{% block navbar %}
+				{% endblock navbar %}
+			</nav>
 			{% block content %}
 			{% endblock content %}
 		</div>
